--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -15,8 +15,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Set current date as env variable
-      run: echo "NOW=$(date +'%Y%m%d%H%M%S')" >> $GITHUB_ENV
     - uses: actions/checkout@v4
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
@@ -65,7 +63,9 @@ jobs:
         name: EdNexusData.Broker.Connector
         path: src/EdNexusData.Broker.Connector/bin/Debug/net8.0/**/*
     - name: EdNexusData.Broker.Connector - Package
-      run: dotnet pack -c Release -o pack/ /p:Version=0.1.$NOW
+      run: dotnet pack -c Release -o pack/ /p:Version=0.1.$RUN_NUMBER
+      env: 
+        RUN_NUMBER: ${{ github.run_number }}
       working-directory: src/EdNexusData.Broker.Connector/
     - name: EdNexusData.Broker.Connector - Upload package
       uses: actions/upload-artifact@v4.3.1
