--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -77,3 +77,4 @@ jobs:
       working-directory: src/EdNexusData.Broker.Connector/
     - name: EdNexusData.Broker.Connector - Publish Package
       run: dotnet nuget push "pack/EdNexusData.Broker.Connector.0.1.$RUN_NUMBER.nupkg" --api-key ${{ secrets.GITHUB_TOKEN }} --source "github"
+      working-directory: src/EdNexusData.Broker.Connector/
