--- a/src/EdNexusData.Broker.Connector/EdNexusData.Broker.Connector.nuspec
+++ b/src/EdNexusData.Broker.Connector/EdNexusData.Broker.Connector.nuspec
@@ -8,14 +8,15 @@
     <owners>Makoa Jacobsen</owners>
     <description>Broker Connector</description>
     <dependencies>
-      <group targetFramework="net8.0" />
-      <dependency id="Microsoft.AspNetCore.Mvc" version="2.2.0" />
-      <dependency id="Microsoft.Extensions.DependencyInjection" version="8.*" />
-      <dependency id="Microsoft.Extensions.Logging.Console" version="8.*" />
-      <dependency id="Ardalis.GuardClauses" version="4.0.1" />
-      <dependency id="Ardalis.Result" version="4.1.0" />
-      <dependency id="Ardalis.Specification" version="6.1.0" />
-      <dependency id="MediatR" version="11.1.0" />
+      <group targetFramework="net8.0">
+        <dependency id="Microsoft.AspNetCore.Mvc" version="2.2.0" />
+        <dependency id="Microsoft.Extensions.DependencyInjection" version="8.*" />
+        <dependency id="Microsoft.Extensions.Logging.Console" version="8.*" />
+        <dependency id="Ardalis.GuardClauses" version="4.0.1" />
+        <dependency id="Ardalis.Result" version="4.1.0" />
+        <dependency id="Ardalis.Specification" version="6.1.0" />
+        <dependency id="MediatR" version="11.1.0" />
+      </group>
     </dependencies>
   </metadata>
    <files>
