--- a/src/EdNexusData.Broker.Connector/EdNexusData.Broker.Connector.nuspec
+++ b/src/EdNexusData.Broker.Connector/EdNexusData.Broker.Connector.nuspec
@@ -7,15 +7,16 @@
     <authors>Makoa Jacobsen</authors>
     <owners>Makoa Jacobsen</owners>
     <description>Broker Connector</description>
+    <repository type="git" url="https://github.com/ednexusdata/broker-core" commit="$commit$" />
     <dependencies>
       <group targetFramework="net8.0">
-        <dependency id="Microsoft.AspNetCore.Mvc" version="2.2.0" />
-        <dependency id="Microsoft.Extensions.DependencyInjection" version="8.*" />
-        <dependency id="Microsoft.Extensions.Logging.Console" version="8.*" />
-        <dependency id="Ardalis.GuardClauses" version="4.0.1" />
-        <dependency id="Ardalis.Result" version="4.1.0" />
-        <dependency id="Ardalis.Specification" version="6.1.0" />
-        <dependency id="MediatR" version="11.1.0" />
+        <dependency id="Microsoft.AspNetCore.Mvc" version="2.2.0" exclude="Build,Analyzers" />
+        <dependency id="Microsoft.Extensions.DependencyInjection" version="8.*" exclude="Build,Analyzers" />
+        <dependency id="Microsoft.Extensions.Logging.Console" version="8.*" exclude="Build,Analyzers" />
+        <dependency id="Ardalis.GuardClauses" version="4.0.1" exclude="Build,Analyzers" />
+        <dependency id="Ardalis.Result" version="4.1.0" exclude="Build,Analyzers" />
+        <dependency id="Ardalis.Specification" version="6.1.0" exclude="Build,Analyzers" />
+        <dependency id="MediatR" version="11.1.0" exclude="Build,Analyzers" />
       </group>
     </dependencies>
   </metadata>
