--- a/src/EdNexusData.Broker.Common.csproj
+++ b/src/EdNexusData.Broker.Common.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Version>0.1.75</Version>
   </PropertyGroup>
 
   <ItemGroup>
