--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -73,4 +73,5 @@ jobs:
         with:
           user: ${{ secrets.NUGET_USER }}
       - name: NuGet push
+        working-directory: src/
         run: dotnet nuget push "pack/EdNexusData.Broker.Common.${{ steps.bump.outputs.newVersion }}.nupkg" --api-key ${{steps.login.outputs.NUGET_API_KEY}} --source https://api.nuget.org/v3/index.json
